Fixed link issues between HTML files Added base services Changed styling for about and services blocks

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
     width: 75%;
     margin: 0 auto;
     margin-top: 20%;
-    border: #bea01a 5px solid;
+    border: #7e0e39 5px solid;
     border-radius: 10px;
     padding-top: 100px;
     font-size: 20px;
@@ -89,4 +89,54 @@
     font-family: 'roboto' 'Poppins', sans-serif;
     padding: 10px 0;
     text-indent: 30px;
+  }
+
+  .services {
+    display: flex;
+    flex-direction: column;
+    background-color: #FCF5E5;
+    
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 20%;
+    border: #7e0e39 5px solid;
+    border-radius: 10px;
+    padding-top: 100px;
+    font-size: 20px;
+    font-family: 'roboto' 'Poppins', sans-serif;
+    padding: 20px 20px;
+    text-align: center;
+  }
+
+  .services p {
+    font-size: 20px;
+    font-family: 'roboto' 'Poppins', sans-serif;
+    padding: 10px 0;
+    text-indent: 30px;
+  }
+  .services ul {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+    margin: 0 auto;
+    width: 50%;
+  }
+  .services ul li {
+    font-size: 20px;
+    font-family: 'roboto' 'Poppins', sans-serif;
+    padding: 10px 0;
+    color: #000000;
+  }
+
+  .services h1 h2 {
+    margin-top: 20px;
+  }
+
+  .firstPurchase {
+    color: #7e0e39;
+  }
+
+  .equineServices, .humanServices {
+    border-bottom: #7e0e39 5px solid;
+    margin-bottom: 40px;
   }
